<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="Camera" Id="{54199d39-c267-4d30-af21-1087ced7f3b2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Camera
VAR
	bInterlocksOK	:BOOL;
END_VAR
VAR_OUTPUT
	iStep			:UINT;
	iStepTemp		:UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[bInterlocksOK := TRUE;

iStepTemp:=iStep;
CASE iStep OF
	0: //Hold
		IF Station.stControl.bRunning THEN
			iStep := 100;
		END_IF
		
	100: //Waiting for Robot
		IF Robot.iStep = 1300 THEN
			iStep := 200;
		END_IF

	200: //Inspect BBs
		Station.stAutoCmd.iFixedCamera_Job := 1;
		IF P05_DeviceControl.fbCamera.q_Args[1] THEN
			iStep := 999;
		END_IF
	
	999: //finish
		iStep := 0;
END_CASE
IF NOT bInterlocksOK THEN
	iStep:=iStepTemp;
END_IF

//Control
Station.stAutoCmd.bConveyorJog := F_StepCMP(iStep, 200, 300, 0, 0, 0, 0, 0, 0, 0, 0);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>