<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="Greaser" Id="{3f93551f-add1-4415-83f8-744ffed6f906}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Greaser
VAR
	bInterlocksOK	:BOOL;
	tonGreasingTime	:TON;
END_VAR
VAR_OUTPUT
	iStep			:UINT;
	iStepTemp		:UINT;
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[bInterlocksOK := TRUE;
tonGreasingTime(IN:=(iStep=200), PT:=T#500MS);

iStepTemp:=iStep;
CASE iStep OF
	0: //Hold
		IF Station.stControl.bRunning THEN
			iStep := 100;
		END_IF
		
	100: //Waiting for robot
		IF Robot.iStep = 900 OR Robot.iStep = 1100 THEN
			iStep := 200;
		END_IF

	200: //Pulse
		IF tonGreasingTime.Q THEN
			iStep := 999;
		END_IF

	999: //finish
		iStep := 0;
END_CASE
IF NOT bInterlocksOK THEN
	iStep:=iStepTemp;
END_IF

//Control
Station.stAutoCmd.bGreasing_Pulse := F_StepCMP(iStep, 200, 0, 0, 0, 0, 0, 0, 0, 0, 0);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>